# OpenDemocracy

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  SECURITY.md  pyproject.toml  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_proposal.md
.github/workflows/: ci.yml
docs/: index.html
results/: ubi_pilot_report.md
src/opendemocracy/: __init__.py  models.py
src/opendemocracy/identity/: __init__.py  biometrics.py  crypto.py  enrollment.py  registry.py  verification.py
src/opendemocracy/input/: __init__.py  anonymizer.py
src/opendemocracy/input/connectors/: __init__.py  reddit.py  twitter.py
src/opendemocracy/modeling/: __init__.py  scenarios.py  simulation.py  tradeoffs.py
src/opendemocracy/output/: __init__.py  reports.py
src/opendemocracy/participation/: __init__.py  submissions.py  topics.py
src/opendemocracy/pilot/: __init__.py  __main__.py  runner.py  ubi_config.py
src/opendemocracy/processing/: __init__.py  bias.py  clustering.py  demographics.py  nlp.py  sentiment.py
src/opendemocracy/web/: __init__.py  __main__.py  app.py
src/opendemocracy/web/static/: index.html
tests/: test_package.py  test_pilot_runner.py
tests/identity/: test_biometrics.py  test_crypto.py  test_enrollment.py  test_registry.py  test_verification.py
tests/input/: test_anonymizer.py
tests/modeling/: test_simulation.py  test_tradeoffs.py
tests/participation/: test_submissions.py  test_topics.py
tests/processing/: test_bias.py  test_clustering.py  test_sentiment.py
tests/web/: test_app.py
